got most of grid working by adding rows and columns and reusing code for tags, still needs a lot of work. also needs to fix toggle being invisible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,4 @@
- body {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 18px;
-    line-height: 34px;
-    color: #777;
-    background: url("../images/concrete_seamless.png");
-}
+
  /* 
 * {
     box-sizing: border-box;
@@ -218,9 +212,19 @@ input[type=submit] {
 } */
 
 /* FPO border divs */
-/* div {
+div {
     border: 1px solid red;
-} */
+}
+
+/* basic body styling */
+
+body {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777;
+    background: url("../images/concrete_seamless.png");
+}
 
 /* logo fixes */
 
@@ -243,6 +247,7 @@ header {
 /* navbar fixes */
 .navbar-nav {
     margin-left: 56%;
+    margin-right: 0;
     width: 0px!important;
 }
 /* link styling */
@@ -268,6 +273,35 @@ a:active {
     padding-bottom: 20px;
 }
 
+/* portfolio page */
+.work {
+    position: relative;
+    float: left;
+    width: 274px;
+    margin: 20px 38px 25px;
+    overflow: auto;
+}
+  
+.work img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
+}
+  
+.work h3 {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 0;
+    font-weight: 300;
+    line-height: 30px;
+    color: #fff;
+    text-align: center;
+    background: #4aaaa5;
+    border-bottom: 0;
+}
+
 
 @media screen and (max-width: 640px) {
     /* container styling */
@@ -277,14 +311,14 @@ a:active {
         margin: 0;
     }
 
-    /* index page specific */
+    /* */
 
     .navbar-brand {
         width: 100%;
         margin-bottom: 24px;
     }
 
-    /* nav bar and logo width */
+    /* nav bar */
     nav {
         position: static;
         line-height: 90px;
